--- a/.circleci/helm/templates/ingress.yaml
+++ b/.circleci/helm/templates/ingress.yaml
@@ -1,5 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "holborn-wordpress.fullname" . -}}
+{{- $webName := include "holborn-wordpress.webFullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
@@ -34,7 +35,7 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: {{ $webName }}
               servicePort: {{ $svcPort }}
         {{- end }}
   {{- end }}
