--- a/.circleci/helm/templates/web-configmap.yaml
+++ b/.circleci/helm/templates/web-configmap.yaml
@@ -43,22 +43,34 @@ data:
 # nginx /etc/nginx/conf.d/default.conf
   default-conf: |-
     upstream php {
-      server {{ include "holborn-wordpress.appFullname" . }}:{{ .Values.service.appPort }}
+      server {{ include "holborn-wordpress.appFullname" . }}:{{ .Values.service.appPort }};
     }
     server {
       listen        80;
       server_name   _;
-      root          /var/www/clarke/holborn2/wp;
-      index         index.php index.html;
-      subs_filter_types  *;
-      subs_filter        'src="http://holborn' 'src="https://holborn';
-      subs_filter        'http://holborn' 'https://holborn' ig;
-      sub_filter_once     off;
+      root          /var/www/html;
+      index         index.php;
+      #root          /var/www/clarke/holborn2/wp;
+      #index         index.php index.html;
+      #subs_filter_types  *;
+      #subs_filter        'src="http://holborn' 'src="https://holborn';
+      #subs_filter        'http://holborn' 'https://holborn' ig;
+      #sub_filter_once     off;
 
       location /members-private/ {
         auth_basic    "Holborn Members Section";
         auth_basic_user_file  /var/www/clarke/holborn2/wp/members-private/.htpasswd;
         autoindex   on;
+      }
+
+      location /_healthz {
+        alias /usr/share/nginx/html;
+        log_not_found off;
+        access_log off;
+      }
+
+      location = / {
+        rewrite ^(.+)$ /index.php?q=$1 last;
       }
 
       location / {
@@ -73,10 +85,12 @@ data:
 
       location ~ \.php$ {
         #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-        include fastcgi.conf;
+        fastcgi_index index.php;
         fastcgi_intercept_errors on;
+        fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+        include fastcgi.conf;
         fastcgi_pass php;
-        try_files $uri $uri/ /index.php?$args =404;
+        #try_files $uri $uri/ /index.php?$args =404;
       }
 
 
@@ -103,7 +117,7 @@ data:
     fastcgi_param  DOCUMENT_ROOT      $document_root;
     fastcgi_param  SERVER_PROTOCOL    $server_protocol;
     fastcgi_param  REQUEST_SCHEME     $scheme;
-    fastcgi_param  HTTPS              $https if_not_empty;
+    fastcgi_param  HTTPS              'on';
 
     fastcgi_param  GATEWAY_INTERFACE  CGI/1.1;
     fastcgi_param  SERVER_SOFTWARE    nginx/$nginx_version;
@@ -118,3 +132,5 @@ data:
     # PHP only, required if PHP was built with --enable-force-cgi-redirect
     fastcgi_param  REDIRECT_STATUS    200;
 
+  gsv: |-
+    google-site-verification: {{ .Values.wordpress.google.siteVerification }}
