--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           name: Add packaged to container
           command: |
             apk update
-            apk add --no-cache openssh-client bash
+            apk add --no-cache openssh-client bash gnupg
       - run:
           name: Setup SSH tunnel
           command: |
