--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
           command: |
             helm repo add holbornscuba https://holbornscuba.github.io/helm
             export HTTPS_PROXY=http://127.0.0.1:48888
+            sleep 5s
             helm upgrade holborn-wordpress holbornscuba/holborn-wordpress --install --values env.yaml --values env-secrets.yaml
 
 workflows:
