Adding the Resources pod

--- a/env.yaml
+++ b/env.yaml
@@ -1,1 +1,20 @@
 # There are no chart overrides
+wordpress:
+  mounts:
+    additionalVolumes:
+      - name: nfs-hdiver
+        nfs:
+          server: 192.168.124.5
+          path: /nfs/hdiver
+  resource:
+    enabled: true
+    mounts:
+      - mountPath:  /var/www/html/resources
+        name:       nfs-resources
+    volumes:
+      - name: nfs-resources
+        nfs:
+          server: 192.168.124.5
+          path: /nfs/hdiver-resources
+
+
