Resources container name update

--- a/env.yaml
+++ b/env.yaml
@@ -7,7 +7,7 @@ wordpress:
           server: 192.168.124.5
           path: /nfs/hdiver
   resource:
-    enabled: true
+    enabled: resources
     mounts:
       - mountPath:  /var/www/html/resources
         name:       nfs-resources
