Adding node selector

--- a/env.yaml
+++ b/env.yaml
@@ -2,6 +2,8 @@
 image:
   appTag:     5.7.1-php8.0-fpm-alpine
 
+nodeSelector:
+  serverbox.co.uk/location: grey
 wordpress:
   mounts:
     additionalVolumes:
