--- a/env.yaml
+++ b/env.yaml
@@ -1,10 +1,13 @@
 # There are no chart overrides
 image:
-  appTag:     5.7.1-php8.0-fpm-alpine
+  appTag:     5.7.1-php7.4-fpm-alpine
 
 nodeSelector:
   serverbox.co.uk/location: grey
+
 wordpress:
+  db:
+    prefix: 'wp_'
   mounts:
     additionalVolumes:
       - name: nfs-hdiver
