Added mailserver ip to deployment

--- a/env.yaml
+++ b/env.yaml
@@ -14,6 +14,7 @@ wordpress:
         nfs:
           server: 192.168.124.5
           path: /nfs/hdiver
+  mailserver: '192.168.124.25'
   resource:
     enabled: resources
     mounts:
